--- a/src/components/EditTripHeader.css
+++ b/src/components/EditTripHeader.css
@@ -14,3 +14,7 @@
 .TripHeader.edit .T-Large {
   width: 100%;
 }
+
+.TripHeader.edit dates {
+  z-index: 100;
+}
